[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/MenuBackground.png" type="Texture" id=1]
[ext_resource path="res://ChoosingLevel.gd" type="Script" id=2]

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 576.0
texture = ExtResource( 1 )
expand = true

[node name="LevelContainer" type="VBoxContainer" parent="."]
margin_left = 448.0
margin_top = 64.0
margin_right = 576.0
margin_bottom = 512.0
custom_constants/separation = 40

[node name="Level1" type="Button" parent="LevelContainer"]
margin_right = 128.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../../VBoxContainer2/Back")
text = "Level 1"

[node name="Level2" type="Button" parent="LevelContainer"]
margin_top = 60.0
margin_right = 128.0
margin_bottom = 80.0
text = "Level 2"

[node name="Level 3" type="Button" parent="LevelContainer"]
margin_top = 120.0
margin_right = 128.0
margin_bottom = 140.0
text = "Level 3"

[node name="Level 4" type="Button" parent="LevelContainer"]
margin_top = 180.0
margin_right = 128.0
margin_bottom = 200.0
text = "Level 4"

[node name="Level 5" type="Button" parent="LevelContainer"]
margin_top = 240.0
margin_right = 128.0
margin_bottom = 260.0
text = "Level 5"

[node name="Level 6" type="Button" parent="LevelContainer"]
margin_top = 300.0
margin_right = 128.0
margin_bottom = 320.0
text = "Level 6"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 384.0
margin_top = 448.0
margin_right = 640.0
margin_bottom = 512.0

[node name="Back" type="Button" parent="VBoxContainer2"]
margin_right = 256.0
margin_bottom = 20.0
focus_neighbour_bottom = NodePath("../../LevelContainer/Level1")
text = "Back"

[connection signal="pressed" from="LevelContainer/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="LevelContainer/Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="LevelContainer/Level 3" to="." method="_on_Level_3_pressed"]
[connection signal="pressed" from="LevelContainer/Level 4" to="." method="_on_Level_4_pressed"]
[connection signal="pressed" from="LevelContainer/Level 5" to="." method="_on_Level_5_pressed"]
[connection signal="pressed" from="LevelContainer/Level 6" to="." method="_on_Level_6_pressed"]
[connection signal="pressed" from="VBoxContainer2/Back" to="." method="_on_Back_pressed"]
